Updated package.json and LICENSE

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
+<title>Express GitHub Stats Card Demo</title>
 <object
   type="text/html"
   data="/.netlify/functions/server"
-  style="width:100vw;height:100vh;"
+  style="width:100vw;height:100vh;padding-top:100px;"
 >
